--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,22 @@
+CHANGES IN VERSION 1.72.0
+-------------------------
+
+SIGNIFICANT USER-VISIBLE CHANGES
+
+    o The vignette documenting the seed-based forging process has moved
+      to the BSgenomeForge package. This vignette used to be called
+      the "BSgenomeForge vignette" but it has now be renamed
+      the "Advanced BSgenomeForge usage" vignette.
+
+    o All the tools related to the seed-based forging process and used by
+      the "Advanced BSgenomeForge usage" vignette are now in the BSgenomeForge
+      package.
+
+
+
+
+
+
 CHANGES IN VERSION 1.28.0
 -------------------------
 
