--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+CHANGES IN VERSION 1.74.0
+-------------------------
+
+- No significant changes in this version.
+
+
 CHANGES IN VERSION 1.72.0
 -------------------------
 
